--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
-    <link rel="stylesheet" href="./src/sass/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap"
         rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./src/images/favicon/favicon.png">
-    <script defer src="./node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <script src="https://kit.fontawesome.com/74e7c74d87.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -60,18 +59,28 @@
                     </p>
                     <div class="products__description__columns layout-2-column">
                         <div class="products__description__column">
-                            <p><i class="fa fa-solid fa-square-check"></i> Stunning on all screens</p>
-                            <p><i class="fas fa-solid fa-square-check"></i> Easy to customize</p>
-                            <p><i class="fas fa-solid fa-square-check"></i> Make a difference</p>
-                            <p><i class="fas fa-solid fa-square-check"></i> Imagine and create</p>
-                            <p><i class="fas fa-solid fa-square-check"></i> Unlimited possibilities</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon"> Stunning
+                                on all screens</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon"> Easy to
+                                customize</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon"> Make a
+                                difference</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon"> Imagine
+                                and create</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon"> Unlimited
+                                possibilities</p>
                         </div>
                         <div class="products__description__column">
-                            <p><i class="fas fa-solid fa-square-check"></i> Remarkable style</p>
-                            <p><i class="fas fa-solid fa-square-check"></i> Captivating presentations</p>
-                            <p><i class="fas fa-solid fa-square-check"></i> Make your portfolio pop</p>
-                            <p><i class="fas fa-solid fa-square-check"></i> Worlds that matter</p>
-                            <p><i class="fas fa-solid fa-square-check"></i> Satisfied clients</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon"> Remarkable
+                                style</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">
+                                Captivating presentations</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon"> Make your
+                                portfolio pop</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon"> Worlds
+                                that matter</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon"> Satisfied
+                                clients</p>
                         </div>
                     </div>
                 </div>
@@ -134,12 +143,18 @@
                         <h2>BASIC </h2>
                         <h5 class="monthly-payment">$35.99 Monthly</h5>
                         <div class="list-of-items">
-                            <p><i class="fas fa-solid fa-square-check"></i>Lorem ipsum dolor sit amet</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Consectetur adipisicing elit</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Sed diam nonummy</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Nibh euismod tincidunt</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Ut laoreet dolore</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Magna aliquam erat volutpat</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Lorem ipsum
+                                dolor sit amet</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Consectetur
+                                adipisicing elit</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Sed diam
+                                nonummy</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Nibh
+                                euismod tincidunt</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Ut laoreet
+                                dolore</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Magna
+                                aliquam erat volutpat</p>
                         </div>
                         <button class="button button_colored">get started</button>
                     </div>
@@ -152,12 +167,18 @@
                         <h2>ADVANCED </h2>
                         <h5 class="monthly-payment">$55.99 Monthly</h5>
                         <div class="list-of-items">
-                            <p><i class="fas fa-solid fa-square-check"></i>Lorem ipsum dolor sit amet</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Consectetur adipisicing elit</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Sed diam nonummy</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Nibh euismod tincidunt</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Ut laoreet dolore</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Magna aliquam erat volutpat</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Lorem ipsum
+                                dolor sit amet</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Consectetur
+                                adipisicing elit</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Sed diam
+                                nonummy</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Nibh
+                                euismod tincidunt</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Ut laoreet
+                                dolore</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Magna
+                                aliquam erat volutpat</p>
                         </div>
                         <button class="button button_colored">get started</button>
                     </div>
@@ -169,12 +190,18 @@
                         <h2>SMART </h2>
                         <h5 class="monthly-payment">$75.99 Monthly</h5>
                         <div class="list-of-items">
-                            <p><i class="fas fa-solid fa-square-check"></i>Lorem ipsum dolor sit amet</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Consectetur adipisicing elit</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Sed diam nonummy</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Nibh euismod tincidunt</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Ut laoreet dolore</p>
-                            <p><i class="fas fa-solid fa-square-check"></i>Magna aliquam erat volutpat</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Lorem ipsum
+                                dolor sit amet</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Consectetur
+                                adipisicing elit</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Sed diam
+                                nonummy</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Nibh
+                                euismod tincidunt</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Ut laoreet
+                                dolore</p>
+                            <p><img class="list-icon" src="./src/images/icons/list-icon.png" alt="list-icon">Magna
+                                aliquam erat volutpat</p>
                         </div>
                         <button class="button button_colored">get started</button>
                     </div>
@@ -193,7 +220,7 @@
                     <h3>STAY INFORMED WITH OUR <br>NEWSLETTER </h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
-                    <form class="stay-informed__form" action="" method="post">
+                    <form class="stay-informed__form" action="" method="">
                         <input type="email" name="email" id="email" placeholder="YOUR EMAIL">
                         <button class="button button_colored">send</button>
                     </form>
@@ -236,7 +263,7 @@
             </div>
         </div>
     </footer>
-    <script src="./src/index.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 
 </html>
